--- a/src/main/resources/templates/positionList.html
+++ b/src/main/resources/templates/positionList.html
@@ -2,42 +2,51 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Lista posad</title>
+    <meta charset="UTF-8">
+    <title>Lista posad</title>
 </head>
-
 <body>
-
 <h1>Lista posad</h1>
-
 <table>
-  <tr>
-    <th>Nazwa</th>
-    <th>Wyplata</th>
-    <th>Umiejetnosci</th>
-    <th>Edytuj</th>
-    <th>Usuń</th>
-  </tr>
-  <tr th:each ="position : ${positions}">
-    <td th:text="${position.name}">NAME</td>
-    <td th:text="${position.salary}">SALARY</td>
-    <td th:text="${position.skills}">SKILLS</td>
-    <td>
-      <a th:href="@{/positions/{id}(id=${position.id})}">
-        <input type="submit" value="Edytuj"/>
-      </a>
-    </td>
-    <td>
-      <form th:action="@{/positions/{id}(id=${position.id})}" th:method="DELETE">
-        <input type = "submit" value="Usuń"/>
-      </form>
-    </td>
-  </tr>
+    <tr>
+        <th>Nazwa posady</th>
+        <th>Wyplata</th>
+        <th>Nazwa firmy</th>
+        <th>Nazwa HR</th>
+        <th>Nr telefonu HR</th>
+        <th>Umiejetnosci</th>
+        <th>Edytuj</th>
+        <th>Usuń</th>
+    </tr>
+    <tr th:each="position : ${positions}">
+        <td th:text="${position.name}">NAME</td>
+        <td th:text="${position.salary}">SALARY</td>
+        <td th:text="${position.companyName}">COMPANY</td>
+        <td th:text="${position.hrName}">HR</td>
+        <td th:text="${position.hrPhoneNumber}">HR PHONE</td>
+        <td>
+            <ul>
+                <li th:each="skill : ${position.skills}">
+                    <span th:text="${skill.name}"></span>
+                    <span>(</span>
+                    <span th:text="${skill.experience}"></span>
+                    <span>)</span>
+                </li>
+            </ul>
+        </td>
+        <td>
+            <a th:href="@{/positions/{id}(id=${position.id})}">
+                <input type="submit" value="Edytuj"/>
+            </a>
+        </td>
+        <td>
+            <form th:action="@{/positions/{id}(id=${position.id})}" th:method="DELETE">
+                <input type="submit" value="Usuń"/>
+            </form>
+        </td>
+    </tr>
 </table>
-
-
 <a th:href="@{/}"><input type="submit" value="Menu"/></a>
 <a th:href="@{/positions/form}"><input type="submit" value="Utwórz posade"/></a>
 </body>
-
 </html>
