--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,9 @@
     <a th:href="@{/candidates/list}"><input type="button" value="Lista kandydatow"/></a><br/>
     <a th:href="@{/positions/list}"><input type="button" value="Lista pozycji"/></a><br/>
     <br>
+    <a th:href="@{/candidates/filter}"><input type="button" value="Szukaj kandydatow"/></a><br/>
+    <a th:href="@{/positions/filter}"><input type="button" value="Szukaj pozycji"/></a><br/>
+    <br>
     <a th:href="@{/candidates/form}"><input type="button" value="Dodaj kandydata"/></a><br/>
     <a th:href="@{/positions/form}"><input type="button" value="Dodaj pozycje"/></a><br/>
 </div>
