--- a/src/main/resources/templates/positionEdit.html
+++ b/src/main/resources/templates/positionEdit.html
@@ -1,3 +1,94 @@
+<!--<!DOCTYPE HTML>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--  <meta charset="UTF-8"/>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Edytuj posade</h1>-->
+<!--<a th:href="@{/positions/list}">Wróć do listy posad</a>-->
+<!--<br/>-->
+
+<!--<br/><br/>-->
+<!--<form th:action="@{/positions/{id}(id=${position.id})}"-->
+<!--      th:object="${position}" th:method="PUT">-->
+<!--  <div th:if="${#fields.hasErrors()}">-->
+<!--            <span class="validationError">-->
+<!--                Usun problemy, sprobuj ponownie-->
+<!--            </span>-->
+<!--  </div>-->
+<!--  <table>-->
+<!--    <tr>-->
+<!--      <td>ID</td>-->
+<!--      <td>:</td>-->
+<!--      <td th:utext="${position.id}">ID</td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--      <td>Nazwa</td>-->
+<!--      <td>:</td>-->
+<!--      <td>-->
+<!--        <input type="text" th:field="*{name}"/>-->
+<!--        <span class="validationError"-->
+<!--              th:if="${#fields.hasErrors('name')}"-->
+<!--              th:errors="*{name}"></span>-->
+<!--      </td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--      <td>Wyplata</td>-->
+<!--      <td>:</td>-->
+<!--      <td>-->
+<!--        <input type="text" th:field="*{salary}"/>-->
+<!--        <span class="validationError"-->
+<!--              th:if="${#fields.hasErrors('salary')}"-->
+<!--              th:errors="*{salary}"></span>-->
+<!--      </td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--      <td>Firma</td>-->
+<!--      <td>:</td>-->
+<!--      <td>-->
+<!--        <input type="text" th:field="*{companyName}"/>-->
+<!--        <span class="validationError"-->
+<!--              th:if="${#fields.hasErrors('companyName')}"-->
+<!--              th:errors="*{companyName}"></span>-->
+<!--      </td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--      <td>HR-owiec</td>-->
+<!--      <td>:</td>-->
+<!--      <td>-->
+<!--        <input type="text" th:field="*{hrName}"/>-->
+<!--        <span class="validationError"-->
+<!--              th:if="${#fields.hasErrors('hrName')}"-->
+<!--              th:errors="*{hrName}"></span>-->
+<!--      </td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--      <td>Nr telefonu do HR</td>-->
+<!--      <td>:</td>-->
+<!--      <td>-->
+<!--        <input type="text" th:field="*{hrPhoneNumber}"/>-->
+<!--        <span class="validationError"-->
+<!--              th:if="${#fields.hasErrors('hrPhoneNumber')}"-->
+<!--              th:errors="*{hrPhoneNumber}"></span>-->
+<!--      </td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--      <td>Umiejętności</td>-->
+<!--      <td>:</td>-->
+<!--      <td>-->
+<!--    <tr th:each="skill, itemStat : *{skills}">-->
+<!--      <td><input th:field="*{skills[__${itemStat.index}__].name}"/></td>-->
+<!--      <td><input th:field="*{skills[__${itemStat.index}__].experience}"/></td>-->
+<!--    </tr>-->
+<!--    </td>-->
+<!--    </tr>-->
+<!--  </table>-->
+<!--  <input type="submit" value="Aktualizuj"/>-->
+<!--</form>-->
+
+<!--<br/>-->
+<!--</body>-->
+<!--</html>-->
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -72,20 +163,68 @@
               th:errors="*{hrPhoneNumber}"></span>
       </td>
     </tr>
-    <tr>
-      <td>Umiejętności</td>
-      <td>:</td>
-      <td>
-    <tr th:each="skill, itemStat : *{skills}">
-      <td><input th:field="*{skills[__${itemStat.index}__].name}"/></td>
-      <td><input th:field="*{skills[__${itemStat.index}__].experience}"/></td>
-    </tr>
-    </td>
-    </tr>
+    <h3>Dodaj umiejętności:</h3>
+    <div id="skillsContainer">
+      <div class="skillRow" th:each="skill, skillStatus : *{skills}">
+        <input type="text" th:field="*{skills[__${skillStatus.index}__].name}" required/>
+        <select th:field="*{skills[__${skillStatus.index}__].experience}">
+          <option th:each="exp : ${T(pl.zabd.zabd_projekt2.model.IExperience).values()}"
+                  th:value="${exp}" th:text="${exp}"></option>
+        </select>
+        <button type="button" class="removeSkillButton" onclick="removeSkill(this)">Usuń</button>
+      </div>
+    </div>
+    <button type="button" onclick="addSkill()">Dodaj umiejętność</button>
   </table>
   <input type="submit" value="Aktualizuj"/>
 </form>
 
 <br/>
+
+<script>
+  var skillCount = 0;
+
+  function addSkill() {
+    var skillsContainer = document.getElementById("skillsContainer");
+    var skillRow = document.createElement("div");
+    skillRow.className = "skillRow";
+
+    var skillNameInput = document.createElement("input");
+    skillNameInput.type = "text";
+    skillNameInput.name = "skills[" + skillCount + "].name";
+    skillNameInput.required = true;
+
+    var skillExperienceSelect = document.createElement("select");
+    skillExperienceSelect.name = "skills[" + skillCount + "].experience";
+    var experienceOptions = ["BEGINNER", "INTERMEDIATE", "ADVANCED"];
+    for (var i = 0; i < experienceOptions.length; i++) {
+      var option = document.createElement("option");
+      option.value = experienceOptions[i];
+      option.text = experienceOptions[i];
+      skillExperienceSelect.appendChild(option);
+    }
+
+    var removeButton = document.createElement("button");
+    removeButton.type = "button";
+    removeButton.className = "removeSkillButton";
+    removeButton.textContent = "Usuń";
+    removeButton.onclick = function() {
+      removeSkill(this);
+    };
+
+    skillRow.appendChild(skillNameInput);
+    skillRow.appendChild(skillExperienceSelect);
+    skillRow.appendChild(removeButton);
+
+    skillsContainer.appendChild(skillRow);
+
+    skillCount++;
+  }
+
+  function removeSkill(button) {
+    var skillRow = button.parentNode;
+    skillRow.parentNode.removeChild(skillRow);
+  }
+</script>
 </body>
 </html>
