--- a/src/main/resources/templates/candidateFilter.html
+++ b/src/main/resources/templates/candidateFilter.html
@@ -1,3 +1,77 @@
+<!--<!DOCTYPE HTML>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8"/>-->
+<!--</head>-->
+
+<!--<body>-->
+<!--<h1>Wyszukaj kandydatów</h1>-->
+<!--<a th:href="@{/candidates/list}">Wróć do listy kandydatow</a>-->
+<!--<br/>-->
+<!--<form th:object="${skills}" th:method="POST" th:action="@{/candidates/filter}">-->
+<!--    <h3>Dodaj umiejętności:</h3>-->
+<!--    <div id="skillsContainer">-->
+<!--        <div class="skillRow" th:each="skill, skillStatus : ${skills}">-->
+<!--            <input type="text" th:field="${skills[__${skillStatus.index}__].name}" required/>-->
+<!--            <select th:field="${skills[__${skillStatus.index}__].experience}">-->
+<!--                <option th:each="exp : ${T(pl.zabd.zabd_projekt2.model.IExperience).values()}"-->
+<!--                        th:value="${exp}" th:text="${exp}"></option>-->
+<!--            </select>-->
+<!--            <button type="button" class="removeSkillButton" onclick="removeSkill(this)">Usuń</button>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <button type="button" onclick="addSkill()">Dodaj umiejętność</button>-->
+<!--    <button type="submit">Szukaj kandydata</button>-->
+<!--</form>-->
+
+
+<!--<script>-->
+<!--    var skillCount = 0;-->
+
+<!--    function addSkill() {-->
+<!--        var skillsContainer = document.getElementById("skillsContainer");-->
+<!--        var skillRow = document.createElement("div");-->
+<!--        skillRow.className = "skillRow";-->
+
+<!--        var skillNameInput = document.createElement("input");-->
+<!--        skillNameInput.type = "text";-->
+<!--        skillNameInput.name = "skills[" + skillCount + "].name";-->
+<!--        skillNameInput.required = true;-->
+
+<!--        var skillExperienceSelect = document.createElement("select");-->
+<!--        skillExperienceSelect.name = "skills[" + skillCount + "].experience";-->
+<!--        var experienceOptions = ["BEGINNER", "INTERMEDIATE", "ADVANCED"];-->
+<!--        for (var i = 0; i < experienceOptions.length; i++) {-->
+<!--            var option = document.createElement("option");-->
+<!--            option.value = experienceOptions[i];-->
+<!--            option.text = experienceOptions[i];-->
+<!--            skillExperienceSelect.appendChild(option);-->
+<!--        }-->
+
+<!--        var removeButton = document.createElement("button");-->
+<!--        removeButton.type = "button";-->
+<!--        removeButton.className = "removeSkillButton";-->
+<!--        removeButton.textContent = "Usuń";-->
+<!--        removeButton.onclick = function() {-->
+<!--            removeSkill(this);-->
+<!--        };-->
+
+<!--        skillRow.appendChild(skillNameInput);-->
+<!--        skillRow.appendChild(skillExperienceSelect);-->
+<!--        skillRow.appendChild(removeButton);-->
+
+<!--        skillsContainer.appendChild(skillRow);-->
+
+<!--        skillCount++;-->
+<!--    }-->
+
+<!--    function removeSkill(button) {-->
+<!--        var skillRow = button.parentNode;-->
+<!--        skillRow.parentNode.removeChild(skillRow);-->
+<!--    }-->
+<!--</script>-->
+<!--</body>-->
+<!--</html>-->
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -6,23 +80,24 @@
 
 <body>
 <h1>Wyszukaj kandydatów</h1>
-<a th:href="@{/candidates/list}">Wróć do listy kandydatow</a>
+<a th:href="@{/candidates/list}">Wróć do listy kandydatów</a>
 <br/>
-<form th:object="${dtos}" th:method="GET">
+<form th:object="${skillForm}" th:method="POST" th:action="@{/candidates/filter}">
     <h3>Dodaj umiejętności:</h3>
     <div id="skillsContainer">
-        <div class="skillRow" th:each="skill, skillStatus : *{skills}">
-            <input type="text" th:field="*{skills[__${skillStatus.index}__].name}" required/>
-            <select th:field="*{skills[__${skillStatus.index}__].experience}">
+        <div class="skillRow" th:each="skill, skillStatus : ${skills}">
+            <input type="text" th:field="*{[__${skillStatus.index}__].name}" required/>
+            <select th:field="*{[__${skillStatus.index}__].experience}">
                 <option th:each="exp : ${T(pl.zabd.zabd_projekt2.model.IExperience).values()}"
                         th:value="${exp}" th:text="${exp}"></option>
             </select>
             <button type="button" class="removeSkillButton" onclick="removeSkill(this)">Usuń</button>
         </div>
     </div>
+    <button type="button" onclick="addSkill()">Dodaj umiejętność</button>
+    <button type="submit">Szukaj kandydata</button>
 </form>
-<button type="button" onclick="addSkill()">Dodaj umiejętność</button>
-<button type="submit">Szukaj kandydata</button>
+
 
 <script>
     var skillCount = 0;
@@ -68,6 +143,7 @@
         var skillRow = button.parentNode;
         skillRow.parentNode.removeChild(skillRow);
     }
+
 </script>
 </body>
 </html>
