--- a/src/main/resources/templates/positionForm.html
+++ b/src/main/resources/templates/positionForm.html
@@ -52,66 +52,16 @@
           th:errors="*{content}"></span>
     <br/>
     <h3>Dodaj umiejętności:</h3>
-    <div id="skillsContainer">
-        <div class="skillRow" th:each="skill, skillStatus : *{skills}">
-            <input type="text" th:field="*{skills[__${skillStatus.index}__].name}" required/>
-            <select th:field="*{skills[__${skillStatus.index}__].experience}">
-                <option th:each="exp : ${T(pl.zabd.zabd_projekt2.model.IExperience).values()}"
-                        th:value="${exp}" th:text="${exp}"></option>
-            </select>
-            <button type="button" class="removeSkillButton" onclick="removeSkill(this)">Usuń</button>
-        </div>
-    </div>
-    <button type="button" onclick="addSkill()">Dodaj umiejętność</button>
+    <select th:field="*{skills}" multiple>
+        <option th:each="skill : ${skills}"
+                th:value="${skill.id}"
+                th:text="${skill.name}+' : '+${skill.experience}">MIASTO
+        </option>
+    </select>
     <input type="submit" value="Utworz posade"/>
 </form>
 
 <a th:href="@{/}"><input type="submit" value="Menu"/></a>
 
-<script>
-    var skillCount = 0;
-
-    function addSkill() {
-        var skillsContainer = document.getElementById("skillsContainer");
-        var skillRow = document.createElement("div");
-        skillRow.className = "skillRow";
-
-        var skillNameInput = document.createElement("input");
-        skillNameInput.type = "text";
-        skillNameInput.name = "skills[" + skillCount + "].name";
-        skillNameInput.required = true;
-
-        var skillExperienceSelect = document.createElement("select");
-        skillExperienceSelect.name = "skills[" + skillCount + "].experience";
-        var experienceOptions = ["BEGINNER", "INTERMEDIATE", "ADVANCED"];
-        for (var i = 0; i < experienceOptions.length; i++) {
-            var option = document.createElement("option");
-            option.value = experienceOptions[i];
-            option.text = experienceOptions[i];
-            skillExperienceSelect.appendChild(option);
-        }
-
-        var removeButton = document.createElement("button");
-        removeButton.type = "button";
-        removeButton.className = "removeSkillButton";
-        removeButton.textContent = "Usuń";
-        removeButton.onclick = function() {
-            removeSkill(this);
-        };
-
-        skillRow.appendChild(skillNameInput);
-        skillRow.appendChild(skillExperienceSelect);
-        skillRow.appendChild(removeButton);
-
-        skillsContainer.appendChild(skillRow);
-
-        skillCount++;
-    }
-
-    function removeSkill(button) {
-        var skillRow = button.parentNode;
-        skillRow.parentNode.removeChild(skillRow);
-    }
-</script>
 </body>
 </html>
