--- a/src/main/resources/templates/positionList.html
+++ b/src/main/resources/templates/positionList.html
@@ -18,6 +18,7 @@
         <th>Umiejetnosci</th>
         <th>Edytuj</th>
         <th>Usuń</th>
+        <th>Szukaj kandydatów</th>
     </tr>
     <tr th:each="position : ${positions}">
         <td th:text="${position.name}">NAME</td>
@@ -45,6 +46,11 @@
         <td>
             <form th:action="@{/positions/{id}(id=${position.id})}" th:method="DELETE">
                 <input type="submit" value="Usuń"/>
+            </form>
+        </td>
+        <td>
+            <form th:action="@{/positions/{id}(id=${position.id})}" th:method="POST">
+                <input type="submit" value="Szukaj"/>
             </form>
         </td>
     </tr>
